[gd_scene load_steps=7 format=3 uid="uid://ry6eb07xx044"]

[ext_resource type="Script" uid="uid://id414iq2a0sc" path="res://interface/main_menu/settings/settings_menu.gd" id="1_ygsll"]
[ext_resource type="PackedScene" uid="uid://c1ybkj8rr0kw3" path="res://interface/main_menu/settings/input_button.tscn" id="2_4ud6d"]
[ext_resource type="FontFile" uid="uid://dag7s301mbfag" path="res://assets/fonts/ChiqPro.ttf" id="2_brg15"]
[ext_resource type="LabelSettings" uid="uid://c0dfukrfgh4x0" path="res://interface/label_settings/chiq_pro_settings.tres" id="2_ygsll"]

[sub_resource type="InputEventKey" id="InputEventKey_x6wae"]
device = -1
keycode = 4194322

[sub_resource type="InputEventKey" id="InputEventKey_m2k76"]
device = -1
keycode = 4194320

[node name="SettingsMenu" type="CenterContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ygsll")

[node name="TabContainer" type="TabContainer" parent="."]
custom_minimum_size = Vector2(400, 200)
layout_mode = 2
theme_override_fonts/font = ExtResource("2_brg15")
theme_override_font_sizes/font_size = 25
current_tab = 0

[node name="Audio" type="MarginContainer" parent="TabContainer"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20
metadata/_tab_index = 0

[node name="VBox" type="VBoxContainer" parent="TabContainer/Audio"]
layout_mode = 2

[node name="HBox" type="HBoxContainer" parent="TabContainer/Audio/VBox"]
layout_mode = 2

[node name="Label" type="Label" parent="TabContainer/Audio/VBox/HBox"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
text = "Music:"
label_settings = ExtResource("2_ygsll")

[node name="Music" type="HSlider" parent="TabContainer/Audio/VBox/HBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
value = 100.0

[node name="HBox2" type="HBoxContainer" parent="TabContainer/Audio/VBox"]
layout_mode = 2

[node name="Label" type="Label" parent="TabContainer/Audio/VBox/HBox2"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
text = "Sound:"
label_settings = ExtResource("2_ygsll")

[node name="Sound" type="HSlider" parent="TabContainer/Audio/VBox/HBox2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
value = 100.0

[node name="Controls" type="MarginContainer" parent="TabContainer"]
visible = false
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20
metadata/_tab_index = 1

[node name="ActionList" type="VBoxContainer" parent="TabContainer/Controls"]
unique_name_in_owner = true
layout_mode = 2

[node name="Beat0" parent="TabContainer/Controls/ActionList" instance=ExtResource("2_4ud6d")]
unique_name_in_owner = true
layout_mode = 2
_input_event = SubResource("InputEventKey_x6wae")
_input_control = "beat_0"

[node name="Action" parent="TabContainer/Controls/ActionList/Beat0/HBox" index="0"]
text = "Beat 0/Down"

[node name="Label" parent="TabContainer/Controls/ActionList/Beat0/HBox" index="2"]
text = "Down"

[node name="Beat1" parent="TabContainer/Controls/ActionList" instance=ExtResource("2_4ud6d")]
unique_name_in_owner = true
layout_mode = 2
_input_event = SubResource("InputEventKey_m2k76")
_input_control = "beat_1"

[node name="Action" parent="TabContainer/Controls/ActionList/Beat1/HBox" index="0"]
text = "Beat 1/Up"

[node name="Label" parent="TabContainer/Controls/ActionList/Beat1/HBox" index="2"]
text = "Up"

[connection signal="value_changed" from="TabContainer/Audio/VBox/HBox/Music" to="." method="_on_music_value_changed"]
[connection signal="value_changed" from="TabContainer/Audio/VBox/HBox2/Sound" to="." method="_on_sound_value_changed"]

[editable path="TabContainer/Controls/ActionList/Beat0"]
[editable path="TabContainer/Controls/ActionList/Beat1"]
